feat: Enhance activity tracking and logging in AgentOrchestrator
- Updated backup directory naming from `.monad_backups` to `.eidolon_backups`.
- Added real-time activity logging and callback mechanism in AgentOrchestrator.
- Integrated activity logging in various orchestration methods for better tracking.
- Set up activity callback in API routes for broadcasting updates.
- Added support for structured response formats in LLM calls across multiple modules.
- Improved database connection handling with locks to prevent concurrency issues.
- Added python-dotenv dependency for environment variable management.
- Created a comprehensive Workflow Analysis Playbook for documenting user workflows.

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,23 @@
 # Environment variables for Eidolon
 # Copy this file to .env and fill in your actual values
 
-# OpenRouter API Key
+# LLM Provider Selection (Required)
+# Options: "openai" | "anthropic" | "mock"
+# Default: "anthropic" (if not set)
+LLM_PROVIDER=openai
+
+# Option 1: OpenRouter (Recommended - supports multiple models)
 # Get your key from: https://openrouter.ai/keys
 OPENROUTER_API_KEY=your-api-key-here
-
-# OpenRouter Configuration
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
-OPENROUTER_MODEL=x-ai/grok-4.1-fast:free
+OPENROUTER_MODEL=openai/gpt-4o-mini
 
-# Alternative: Use Anthropic Claude directly
+# Option 2: Use Anthropic Claude directly
+# LLM_PROVIDER=anthropic
 # ANTHROPIC_API_KEY=your-anthropic-key-here
 # ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
 
-# Alternative: Use OpenAI directly
+# Option 3: Use OpenAI directly
+# LLM_PROVIDER=openai
 # OPENAI_API_KEY=your-openai-key-here
-# OPENAI_MODEL=gpt-4-turbo
+# OPENAI_MODEL=gpt-4o-mini
