--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
   "prometheus-client==0.21.0",
   "psutil==6.1.0",
   "networkx>=3.2.1",
+  "python-dotenv>=1.2.1",
 ]
 
 [project.optional-dependencies]
